samples/_failures_safe/1761481023_c25cb3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3d22dd5.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_c3d22dd5.c:183:13: error: expected declaration or statement at end of input
  183 |             printf("Vertex %d: %d\n", i, dist[i]);
      |             ^~~~~~
./samples/SAFE/__tmp_c3d22dd5.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c3d22dd5.c:183:13: error: expected declaration or statement at end of input
